// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputText /> renders the component disabled 1`] = `
.c0 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  padding: 0 16px;
  height: 50px;
  font-size: 15px;
  font-weight: 400;
  color: #2C3236;
  border: 1px solid #818F9B;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c0:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c0::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:disabled {
  background-color: #F7F7F7;
  color: #818F9B;
}

<input
  class="c0"
  disabled=""
  name="name"
/>
`;

exports[`<InputText /> renders the component with error 1`] = `
.c0 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  padding: 0 16px;
  height: 50px;
  font-size: 15px;
  font-weight: 400;
  color: #2C3236;
  border: 1px solid #FF4539;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c0:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c0::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:disabled {
  background-color: #F7F7F7;
  color: #818F9B;
}

<input
  class="c0"
  name="name"
/>
`;

exports[`<InputText /> renders the component with focus 1`] = `
.c0 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  padding: 0 16px;
  height: 50px;
  font-size: 15px;
  font-weight: 400;
  color: #2C3236;
  border: 1px solid #818F9B;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c0:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c0::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:disabled {
  background-color: #F7F7F7;
  color: #818F9B;
}

<input
  class="c0"
  name="name"
/>
`;

exports[`<InputText /> renders the component with isValid set as true 1`] = `
.c0 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  padding: 0 16px;
  height: 50px;
  font-size: 15px;
  font-weight: 400;
  color: #2C3236;
  border: 1px solid #3EBC64;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c0:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c0::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:disabled {
  background-color: #F7F7F7;
  color: #818F9B;
}

<input
  class="c0"
  name="name"
/>
`;

exports[`<InputText /> renders the component with the required props 1`] = `
.c0 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  padding: 0 16px;
  height: 50px;
  font-size: 15px;
  font-weight: 400;
  color: #2C3236;
  border: 1px solid #818F9B;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c0:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c0::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:disabled {
  background-color: #F7F7F7;
  color: #818F9B;
}

<input
  class="c0"
  name="name"
/>
`;
